Thu Sep 21 11:54:54 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * src/Key_List.cpp (output_hash_function): Fixed a bug where the
          wrong type is chosen if max_hash_value was == UCHAR_MAX or
          _USHRT_MAX.  Thanks to Jody Hagins <jody at atdesk dot com> for
          this fix.  This fixes bug id 2655.

Tue Mar 14 21:08:12 UTC 2006  jiang,shanshan <shanshan.jiang@vanderbilt.edu>

        * apps/gperf/src/Gen_Perf.cpp
        * apps/gperf/src/Key_List.cpp
        * apps/gperf/src/List_Node.cpp
        * apps/gperf/src/Options.cpp
          Updated these files to solve the warnings when setting up "VC level 4 warnings"
          on Windows. These warnings include "unreachable code", "assignment within
          conditional expression", "conversion from some type to another type, possible
          loss of data", "local variable may be used without having been initialized" and
          so on.
          Thanks to Lukas Gruetzmacher <gruetzmacher at ais-dresden dot de> for 
          motivating the fix to these "VC level 4 warnings".

Wed Jan  4 22:55:24 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

         * ChangeLog:

          Untabify.
          Delete-trailing-whitespace.

          Added "Local Variables" section defining "add-log-time-format"
          to a really ugly lambda expression that formats changelog
          timestamps in UTC and works with both GNU Emacs and XEmacs.

Mon Oct  3 13:52:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * src/Key_List.cpp:
          Fixed might be unitialized warning in Cygwin build

Thu Jun  9 18:34:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * src/Key_List.cpp:
          Only generate the base pointer when it is used. Fixes bugzilla 2099.
          Thanks to Frank Pilhofer <fp@mc.com>

Sat Apr 30 10:56:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * src/Key_List.cpp: